# cvinsight_project

./: .gitignore  LICENSE  README.md
cvinsight_api/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
cvinsight_api/app/: config.py  main.py
cvinsight_api/app/api/endpoints/: analysis.py
cvinsight_api/app/db/: database.py
cvinsight_api/app/models/: analysis.py
cvinsight_api/app/schemas/: analysis.py
cvinsight_api/app/services/: ai_analyzer.py  cv_parser.py
cvinsight_web/: index.html  package-lock.json  package.json  tailwind.config.js
cvinsight_web/src/: App.vue  main.js  style.css
cvinsight_web/src/lib/: api.js
cvinsight_web/src/views/: CoverLetterView.vue  DashboardView.vue  HistoryView.vue  HomeView.vue  JobMatchView.vue  UploadView.vue
